--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jack's Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -13,7 +17,7 @@
       <div class="header container">
         <div class="nav-bar">
           <div class="brand">
-            <a href="#hero">
+            <a href="#showcase">
               <h1>Jack Pope</h1>
             </a>
           </div>
@@ -22,8 +26,8 @@
               <div class="bar"></div>
             </div>
             <ul>
-              <li><a href="#hero" data-after="Home">Home</a></li>
-              <li><a href="#contents" data-after="Content">Curricula</a></li>
+              <li><a href="#showcase" data-after="Home">Home</a></li>
+              <li><a href="#contents" data-after="Curricula">Curricula</a></li>
               <li><a href="#projects" data-after="Projects">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -34,8 +38,8 @@
     </section>
 
     <!-- HERO  -->
-    <section id="hero">
-      <div class="hero container">
+    <section id="showcase">
+      <div class="showcase container">
         <div>
           <h1>Hello,</h1>
           <h1>My Name is</h1>
@@ -54,24 +58,24 @@
         </div>
         <div class="content-bottom">
           <div class="content-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <div class="icon"><i class="fas fa-code fa-4x"></i></div>
             <h2>Web Development</h2>
             <p>I began learning web development in July 2018. Prior to that I had dabbled in compterish things, earning certificates in Word and Excel. Going back even further, I took a few courses in COBOL, and I remember barely a keystroke today. At the time, I sensed computers just weren't for me - that was in spring of 1993, and the Internet was yet to explode, which it did indeed with the launch of Yahoo in 1994. In the meantime, I pursued other objectives, and now I have come full circle back to tech.</p>
           </div>
           <div class="content-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <div class="icon"><i class="fas fa-book-reader fa-4x"></i></div>
             <h2>Coursework</h2>
             <p>In process: Web Development Certificate at CCM. This program is designed to build competence with all relevant and necessary tools, beginning with advanced HTML, CSS, JavaScript, and other scripting languages. Skills are honed to create and maintain websites that are responsive and dynamic. The use of development tools in building dynamic Web sites is mastered.</p>
           </div>
           <div class="content-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <div class="icon"><i class="fas fa-tools fa-4x"></i></div>
             <h2>Projects</h2>
-            <p>See my projects below. Along the way, I have encountered SASS/BEM, GitHub, Node.js, image manipulation, NPM Webpack, ReactJS, MongoDB, C#, PHP, web hosting, Bootstrap, Font Awesome, HEX/RGB, and more. My experience has been enlightening and enjoyable, and sometimes exasperating - but in the best way possible, because the greatest learning comes through solving problems. All is a work in progress!</p>
+            <p>Along the way, I have encountered SASS/BEM, GitHub, Node.js, image manipulation, NPM Webpack, ReactJS, MongoDB, C#, PHP, web hosting, Bootstrap, Font Awesome, HEX/RGB, and more. My experience has been exhilarating and sometimes exasperating - but in the best way possible. The greatest learning comes through solving problems.</p>
           </div>
           <div class="content-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+            <div class="icon"><i class="fas fa-binoculars fa-4x"></i></div>
             <h2>More...</h2>
-            <p>I have enjoyed this process, having built a site for a fictitious web agency, and an equally-whimsical tech news site called InfoQuarter. I also regularly update this portfolio page. There is so much to learn, but I am amazed at what I can do after just three short years of (mostly) self-education!</p>
+            <p>I have enjoyed this process, having built a site for a fictitious web agency, and an equally-whimsical tech news site called InfoQuarter. I regularly update this portfolio page. There is a lot to learn, but I am amazed at what I can do after just three years.</p>
             <p>I never miss an opportunity to boost my friend Mike, who wrote a beautiful kids' story, <em>MAC's Robot.</em> Visit True Journey Books to learn more! <a href="https://www.truejourneyllc.com/" class="cta-2">True Journey Books</a></p>
           </div>
         </div>
@@ -134,7 +138,7 @@
               <h1>Info-Quarter USA</h1>
               <h2>Another Non-Tangible Company - Tech News & Views</h2>
               <p>Technologies that will Transform the Global Economy. Also, robots.</p>
-              <a href="#projects">View on GitHub Pages</a>
+              <a href="https://jwilliampope.github.io/info-quarter-mag/">View on GitHub Pages</a>
             </div>
             <div class="project-img">
               <img src="./img/infoquarter.jpg" alt="satellite in orbit over Earth" />
@@ -172,21 +176,21 @@
         </div>
         <div class="contact-items">
           <div class="contact-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+            <div class="icon"><i class="fas fa-phone-alt fa-4x"></i></div>
             <div class="contact-info">
               <h1>Phone</h1>
               <h2>(973) 349-6522</h2>
             </div>
           </div>
           <div class="contact-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+            <div class="icon"><i class="fas fa-envelope fa-4x"></i></div>
             <div class="contact-info">
               <h1>Email</h1>
               <h2>jack@byramdigitalmedia.com</h2>
             </div>
           </div>
           <div class="contact-item">
-            <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+            <div class="icon"><i class="fas fa-map-marker-alt fa-4x"></i></div>
             <div class="contact-info">
               <h1>Address</h1>
               <h2>2 Cranberrry Square, Byram NJ</h2>
@@ -200,24 +204,21 @@
     <section id="footer">
       <div class="footer container">
         <div class="brand">
-          <h1><span>J</span>ack <span>P</span>ope</h1>
+          <h1>Jack Pope</h1>
         </div>
-        <h2>Your Complete Web Solution</h2>
+        <h2>Full-Time Web Devloper</h2>
         <div class="social-icon">
           <div class="social-item">
-            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+            <a href="https://byramdigitalmedia.com/"><img src="https://img.icons8.com/fluency-systems-filled/48/000000/b.png" /></a>
           </div>
           <div class="social-item">
-            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+            <a href="https://github.com/jwilliampope"><img src="https://img.icons8.com/material-rounded/24/000000/github.png" /></a>
           </div>
           <div class="social-item">
-            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
-          </div>
-          <div class="social-item">
-            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+            <a href="#"><img src="https://img.icons8.com/windows/50/000000/heroku.png" /></a>
           </div>
         </div>
-        <p>Copyright &copy; <span id="year"></span> BDM</p>
+        <p>Copyright &copy; <span id="year"></span> J. William Pope</p>
       </div>
     </section>
     <script src="js/main.js"></script>
