changed some fonts, colors, tags

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <section id="showcase">
       <div class="showcase container">
         <div>
-          <h1>Hello,</h1>
-          <h1>My Name is</h1>
-          <h1>Jack</h1>
+          <h2>JACK</h2>
+          <h2>Full-Time</h2>
+          <h2>Web Developer</h2>
           <a href="#projects" type="button" class="cta">Portfolio</a>
         </div>
       </div>
@@ -70,13 +70,13 @@
           <div class="content-item">
             <div class="icon"><i class="fas fa-tools fa-4x"></i></div>
             <h2>Projects</h2>
-            <p>Along the way, I have encountered SASS/BEM, GitHub, Node.js, image manipulation, NPM Webpack, ReactJS, MongoDB, C#, PHP, web hosting, Bootstrap, Font Awesome, HEX/RGB, and more. My experience has been exhilarating and sometimes exasperating - but in the best way possible. The greatest learning comes through solving problems.</p>
+            <p>Along the way, I have encountered SASS/BEM, GitHub, Node.js, image manipulation, NPM Webpack, ReactJS, MongoDB, C#, PHP, web hosting, Bootstrap, Font Awesome, HEX/RGB, and more. My experience has been exhilarating and often challenging - but in the best way possible. The greatest learning comes through solving problems.</p>
           </div>
           <div class="content-item">
             <div class="icon"><i class="fas fa-binoculars fa-4x"></i></div>
             <h2>More...</h2>
             <p>I have enjoyed this process, having built a site for a fictitious web agency, and an equally-whimsical tech news site called InfoQuarter. I regularly update this portfolio page. There is a lot to learn, but I am amazed at what I can do after just three years.</p>
-            <p>I never miss an opportunity to boost my friend Mike, who wrote a beautiful kids' story, <em>MAC's Robot.</em> Visit True Journey Books to learn more! <a href="https://www.truejourneyllc.com/" class="cta-2">True Journey Books</a></p>
+            <p>I never miss an opportunity to boost my friend Mike, who wrote a beautiful kids' story, <em>MAC's Robot.</em> Visit True Journey Books to learn more! <a href="https://www.truejourneyllc.com/" class="cta-2" target="_blank">True Journey Books</a></p>
           </div>
         </div>
       </div>
