added imgs, etc

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
               <li><a href="#showcase" data-after="Home">Home</a></li>
               <li><a href="#contents" data-after="Curricula">Curricula</a></li>
-              <li><a href="#projects" data-after="Projects">Projects</a></li>
+              <li><a href="#projects" data-after="Portfolio">Portfolio</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
             </ul>
@@ -86,7 +86,7 @@
     <section id="projects">
       <div class="projects container">
         <div class="projects-header">
-          <h1 class="section-title">Recent <span>Projects</span></h1>
+          <h1 class="section-title">Portfolio</h1>
         </div>
         <div class="all-projects">
           <div class="project-item">
@@ -122,17 +122,7 @@
               <img src="./img/bdm.jpg" alt="Victorian clockworks" />
             </div>
           </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Healing Images</h1>
-              <h2>Surgery Is Hard - Healing Is Beautiful</h2>
-              <p>WARNING: Some of these images are not so pretty... "Surgery may break the skin, but it leaves the spirit intact and the second helps to heal the first."</p>
-              <a href="https://healing-images.herokuapp.com/">View on Heroku</a>
-            </div>
-            <div class="project-img">
-              <img src="./img/healing.jpg" alt="sun in clouds" />
-            </div>
-          </div>
+
           <div class="project-item">
             <div class="project-info">
               <h1>Info-Quarter USA</h1>
@@ -157,7 +147,7 @@
           </div>
         </div>
         <div class="col-right">
-          <h1 class="section-title">About <span>me</span></h1>
+          <h1 class="section-title">Bio</h1>
           <h2>Learning Every Day</h2>
           <p>I live in northwestern NJ. My first actual solicited project was, naturally enough, for family. The Irish side of the family tree had a stack of family history items scattered about, amd much of it kept getting lost and then reappearing. I was asked to compile and preserve this material, and a website seemed to be the perfect vehicle for this request.</p>
 
@@ -184,6 +174,7 @@
           </div>
           <div class="contact-item">
             <div class="icon"><i class="fas fa-envelope fa-4x"></i></div>
+
             <div class="contact-info">
               <h1>Email</h1>
               <h2>jack@byramdigitalmedia.com</h2>
