--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
           <p>My next experience with design and development came via a request from a friend to help him with a book project. He has since built his own site with Wix, but the experience for me was invaluable. We shared ideas, and I built a prototype site for him. I have kept this site as part of my portfolio and update it regularly with new ideas and formats. Incidentally, his book, called "MAC'S Robot," is a wonderful tale aimed at kids from ages three to five - nevertheless, kids from ages 30 through 50 will enjoy it as well!</p>
 
-          <a href="#" class="cta">Download Resume</a>
+          <a href="#showcase" class="cta">Home</a>
         </div>
       </div>
     </section>
@@ -177,7 +177,7 @@
 
             <div class="contact-info">
               <h1>Email</h1>
-              <h2>jack@byramdigitalmedia.com</h2>
+              <h2>jwilliampope@hotmail.com</h2>
             </div>
           </div>
           <div class="contact-item">
@@ -210,6 +210,7 @@
           </div>
         </div>
         <p>Copyright &copy; <span id="year"></span> J. William Pope</p>
+        <p><small>All assets on this page are for demonstration and testing only. </small></p>
       </div>
     </section>
     <script src="js/main.js"></script>
