--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="icon"><i class="fas fa-map-marker-alt fa-4x"></i></div>
             <div class="contact-info">
               <h1>Address</h1>
-              <h2>2 Cranberrry Square, Byram NJ</h2>
+              <h2>2 Cranberry Square, Byram NJ</h2>
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
         <div class="brand">
           <h1>Jack Pope</h1>
         </div>
-        <h2>Full-Time Web Devloper</h2>
+        <h2>Full-Time Web Developer</h2>
         <div class="social-icon">
           <div class="social-item">
             <a href="https://byramdigitalmedia.com/"><img src="https://img.icons8.com/fluency-systems-filled/48/000000/b.png" /></a>
